Made static_page the new root address response, fixed it up a bit and built on its styling a little bit. Changed server to reflect these changes (as well as static_page's change in location from the previous commit).

--- a/public/static/static_page.html
+++ b/public/static/static_page.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/static_style.css">
 </head>
 <body>
-    <center>
-    <h1>THIS IS MY STATIC PAGE HEADER</h1>
-    <p>I don't know what I'm going to do with this, if anything.</p>
-    <img src="media/hulk_chair.png" alt="AHHHHH ERROR ERROR">
-    </center>
+    <div class="content-div">
+        <h1>THIS IS MY GENERIC GREETING PAGE</h1>
+        <p class="greeting">Welcome to my fake store front!</p>
+        <img src="media/hulk_chair.png" alt="AHHHHH ERROR ERROR">
+    </div>
 </body>
 </html>
