Changed greeting page image to the frog chair. Fixed a styling error for the header and added a few more small details (hover effects, margin for the image)

--- a/public/static/static_page.html
+++ b/public/static/static_page.html
@@ -11,7 +11,7 @@
     <div class="content-div">
         <h1>THIS IS MY GENERIC GREETING PAGE</h1>
         <p class="greeting">Welcome to my fake store front!</p>
-        <img src="media/hulk_chair.png" alt="AHHHHH ERROR ERROR">
+        <img class="greeting-image" src="media/frog_chair.jpg" alt="A chair resembling a frog">
     </div>
 </body>
 </html>
